--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,20 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>gr.unipi</groupId>
 	<artifactId>theMealDB</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 
+	<properties>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
 	<dependencies>
 		<!-- Source:
-		https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+		https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
+			<artifactId>junit-jupiter</artifactId>
 			<version>5.11.4</version>
 			<scope>test</scope>
 		</dependency>
@@ -31,7 +36,6 @@
 			<version>5.14.2</version>
 			<scope>test</scope>
 		</dependency>
-
 		<!--
 		https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
 		<dependency>
@@ -54,7 +58,15 @@
 			<version>5.5.1</version>
 			<scope>compile</scope>
 		</dependency>
-
-
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
+			</plugin>
+		</plugins>
+	</build>
 </project>
