--- a/meal-lab-api/pom.xml
+++ b/meal-lab-api/pom.xml
@@ -2,7 +2,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>gr.unipi</groupId>
+	<groupId>gr.unipi.ddim</groupId>
 	<artifactId>meal-lab-api</artifactId>
 	<version>1.0</version>
 
