--- a/meal-lab-app/pom.xml
+++ b/meal-lab-app/pom.xml
@@ -48,6 +48,17 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.25.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.25.3</version>
+		</dependency>
+
+		<dependency>
 			<groupId>gr.unipi.ddim</groupId>
 			<artifactId>meal-lab-api</artifactId>
 			<version>1.0</version>
